# carousel-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: run_bot.sh  start_container.sh
src/carousel_bot/: __init__.py  bot.py  config.py  models.py  openai_service.py  prompts.py  renderer.py  sample_render.py
